# puzzle_solver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PlotsNotebook.ipynb  README.md  Untitled.ipynb  data.txt
inc/: App.hpp  AstrStrategy.hpp  BfsStrategy.hpp  Config.hpp  ConfigParser.hpp  Constants.hpp  DfsStrategy.hpp  Node.hpp  ResultsManager.hpp  Solution.hpp  State.hpp  StateParser.hpp  Strategy.hpp  StrategyContext.hpp
sandbox/: donotremoveme.txt  runprog.sh  runval.sh
sprawko/: Marcin_Pajkowski_211968_Rafal_Warda_214067.tex  Untitled.tex  classrep.cls
src/: App.cpp  AstrStrategy.cpp  BfsStrategy.cpp  CMakeLists.txt  Config.cpp  ConfigParser.cpp  Constants.cpp  DfsStrategy.cpp  Node.cpp  ResultsManager.cpp  State.cpp  StateParser.cpp  Strategy.cpp  StrategyContext.cpp  main.cpp
test/: CMakeLists.txt  ConfigTest.cpp  StateTest.cpp  StrategyContextTest.cpp  StrategyTest.cpp
